# bet-scanner-bot

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
src/bet_scanner/: bot.py  config.py  errors.py  formatter.py  main.py  models.py  providers.py  scanner.py  storage.py
tests/: test_config.py  test_formatter.py  test_providers.py  test_scanner.py
