[project]
name = "bet-scanner-bot"
version = "0.1.0"
description = "Telegram bot for bookmaker odds monitoring and arbitrage scanning"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot==22.1",
  "httpx==0.28.1",
  "python-dotenv==1.1.0",
  "pydantic==2.11.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"
